--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.2.1",
     "primeng": "^14.2.5-lts",
     "rxjs": "~7.8.0",
