--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.2.1",
-    "primeng": "^14.2.5-lts",
+    "primeng": "^15.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
